--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/icons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/icons/favicon-32x32.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-32x32.png">
 
     <!-- Animate CSS CDN -->
     <link
@@ -271,10 +262,7 @@
     <footer>
       <p class="copy">&copy; Copyright 2021</p>
       <p class="copy">
-        Built with &#x2661; by
-        <a href="https://twitter.com/koladechris" target="_blank"
-          >Kolade Chris (Ksound)</a
-        >
+        Built with &#x2661; AishSunbae
       </p>
     </footer>
 
