--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             <input
               type="submit"
               value="Submit"
+              name="submit"
               id="submit-btn"
               class="submit-btn"
             />
