update the contact form to netlify form settings

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
-          <form action="https://formspree.io/f/xyylagbe" method="POST">
+          <form name="contact" data-netlify="true" method="POST">
             <div class="form-control">
               <label for="name">Name</label>
               <input
