update twitter link commented theme switcher

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <!-- Navbar -->
     <nav>
       <h1>AishSunbae</h1>
-      <!-- Dark theme switcher -->
+      <!-- Dark theme switcher
       <div class="theme-switcher">
         <input type="checkbox" id="switcher">
         <label id="switcher-label" for="switcher">Switch</label>
-      </div>
+      </div> -->
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -272,7 +272,7 @@
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="https://twitter.com/AishSunbae2017" target="_blank"
+      <a href="https://twitter.com/AishSunbae" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
